--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Chandra Shekhar Rawat",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.2.0",
